--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sagun Shrestha</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    
+
+    <header>
+        <nav>
+            <div class='top-bar'>
+                <h2>Sagun Shrestha</h2>
+                <div>
+                    <a href="#"><button>Home</button></a>
+                    <a href="#"><button>About</button></a>
+                    <a href="#"><button>Contact</button></a>
+                    <a href="#"><button>Projects</button></a>
+                </div>   
+            </div>
+            <div class='big-pic'>
+                <h1>Sagun Shrestha</h1>
+                <a href="#"><button>My Projects</button></a>
+            </div>
+        </nav>
+    </header>
+
+    <section class="middle">
+        <div class="pic1">
+            <img src="/earth.jpeg" alt="random pic">
+            <p>title of a</p>
+        </div>
+        <div class="pic2">
+            <img src="/earth.jpeg" alt="random pic">
+            <p>project might</p>
+        </div>
+        <div class="pic3">
+            <img src="/earth.jpeg" alt="random pic">
+            <p>go here</p>
+        </div>
+        <div class="pic4">
+            <img src="/earth.jpeg" alt="random pic">
+            <p>ice</p>
+        </div>
+        <div class="pic5">
+            <img src="/earth.jpeg" alt="random pic">
+            <p>games</p>
+        </div>
+        <div class="pic6">
+            <img src="/earth.jpeg" alt="random pic">
+            <p>peppers</p>
+        </div>   
+    </section>
+
+    <footer>
+        <button>
+            <a href="#">Contact Me</a>
+        </button>
+    </footer>
 </body>
 </html>
