--- a/index.html
+++ b/index.html
@@ -13,15 +13,29 @@
             <div class='top-bar'>
                 <h2>Sagun Shrestha</h2>
                 <div>
-                    <a href="#"><button>Home</button></a>
+                    <!-- <a href="#"><button>Home</button></a>
                     <a href="#"><button>About</button></a>
                     <a href="#"><button>Contact</button></a>
-                    <a href="#"><button>Projects</button></a>
+                    <a href="#"><button>Projects</button></a> -->
+                    <button>
+                        <a href="#">Home</a>
+                    </button>
+                    <button>
+                        <a href="#">About</a>
+                    </button>
+                    <button>
+                        <a href="#">Contact</a>
+                    </button>
+                    <button>
+                        <a href="#">Projects</a>
+                    </button>
                 </div>   
             </div>
             <div class='big-pic'>
                 <h1>Sagun Shrestha</h1>
-                <a href="#"><button>My Projects</button></a>
+                    <button>
+                        <a href="#">My Projects</a>
+                    </button>
             </div>
         </nav>
     </header>
